samples/_failures_safe/1761270583_a0f9b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b227e08.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_6b227e08.c:150:32: error: expected ‘;’ at end of input
  150 |                     lexer->line
      |                                ^
      |                                ;
./samples/SAFE/__tmp_6b227e08.c:150:21: error: expected declaration or statement at end of input
  150 |                     lexer->line
      |                     ^~~~~
./samples/SAFE/__tmp_6b227e08.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b227e08.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b227e08.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6b227e08.c:150:21: error: expected declaration or statement at end of input
